--- a/CourseApp/CourseApp.csproj
+++ b/CourseApp/CourseApp.csproj
@@ -8,16 +8,16 @@
   </PropertyGroup>
 
    <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta008" PrivateAssets="All" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
   <PropertyGroup>
-    <CodeAnalysisRuleSet>../stylecop.ruleset</CodeAnalysisRuleSet> 
+    <CodeAnalysisRuleSet>../stylecop/stylecop.ruleset</CodeAnalysisRuleSet> 
     <GenerateFullPaths>true</GenerateFullPaths>
   </PropertyGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="../stylecop.json" />
+    <AdditionalFiles Include="../stylecop/stylecop.json" />
   </ItemGroup>
 
 </Project>
